erDiagram
    USER ||--o{ PLACE : creates
    USER ||--o{ POST : authors
    USER ||--o{ POST_COMMENT : writes
    USER ||--o{ POST_REACTION : makes
    USER ||--o{ COMMENT_REACTION : makes
    USER ||--o{ REVIEW : writes
    USER ||--o{ CHAT : owns
    USER ||--o{ CHAT_MEMBER : participates
    USER ||--o{ CHAT_MESSAGE : sends
    USER ||--o{ MEDIA_FILE : uploads
    USER ||--o{ PLACE_LIKE : gives
    USER ||--o{ GROUP : owns
    USER ||--o{ GROUP_MEMBER : joins

    PLACE ||--o{ POST : "tagged_in"
    PLACE ||--o{ REVIEW : "has_reviews"
    PLACE ||--o{ PLACE_LIKE : receives
    PLACE ||--o{ PLACE_VIEW : views
    GROUP ||--o{ PLACE : contains

    POST ||--o{ POST_COMMENT : "has_comments"
    POST ||--o{ POST_REACTION : receives
    POST ||--o{ POST_ATTACHMENT : contains
    POST ||--o{ POST_VIEW : views

    POST_COMMENT ||--o{ COMMENT_REACTION : receives

    REVIEW ||--o{ REVIEW_REACTION : receives
    REVIEW ||--o{ REVIEW_COMMENT : "has_comments"

    CHAT ||--o{ CHAT_MEMBER : "has_members"
    CHAT ||--o{ CHAT_MESSAGE : "contains_messages"

    CHAT_MESSAGE ||--o{ MESSAGE_ATTACHMENT : contains

    GROUP ||--o{ GROUP_MEMBER : "has_members"
    GROUP ||--o{ PLACE : contains

    USER : uint id PK
    USER : string email UK
    USER : string username UK
    USER : string password
    USER : string role
    USER : string avatar
    USER : text bio
    USER : bool is_active
    USER : datetime created_at
    USER : datetime updated_at

    PLACE : uint id PK
    PLACE : string name
    PLACE : text description
    PLACE : float latitude
    PLACE : float longitude
    PLACE : string address
    PLACE : string category
    PLACE : string privacy
    PLACE : string approval_status
    PLACE : uint group_id FK
    PLACE : float rating
    PLACE : int review_count
    PLACE : int like_count
    PLACE : uint user_id FK
    PLACE : string media_urls
    PLACE : bool is_verified
    PLACE : datetime created_at

    POST : uint id PK
    POST : uint user_id FK
    POST : string username
    POST : text content
    POST : string media_urls
    POST : uint place_id FK
    POST : int like_count
    POST : int comment_count
    POST : datetime created_at

    POST_COMMENT : uint id PK
    POST_COMMENT : uint post_id FK
    POST_COMMENT : uint user_id FK
    POST_COMMENT : text content
    POST_COMMENT : string media_urls
    POST_COMMENT : datetime created_at

    POST_REACTION : uint id PK
    POST_REACTION : uint post_id FK
    POST_REACTION : uint user_id FK
    POST_REACTION : string type
    POST_REACTION : datetime created_at

    COMMENT_REACTION : uint id PK
    COMMENT_REACTION : uint comment_id FK
    COMMENT_REACTION : uint user_id FK
    COMMENT_REACTION : string type
    COMMENT_REACTION : datetime created_at

    POST_ATTACHMENT : uint id PK
    POST_ATTACHMENT : uint post_id FK
    POST_ATTACHMENT : string url
    POST_ATTACHMENT : string type
    POST_ATTACHMENT : int64 size
    POST_ATTACHMENT : datetime created_at

    POST_VIEW : uint id PK
    POST_VIEW : uint post_id FK
    POST_VIEW : uint user_id FK
    POST_VIEW : datetime viewed_at
    POST_VIEW : string device_type
    POST_VIEW : string country

    REVIEW : uint id PK
    REVIEW : uint place_id FK
    REVIEW : uint user_id FK
    REVIEW : text content
    REVIEW : float rating
    REVIEW : string media_urls
    REVIEW : int like_count
    REVIEW : datetime created_at

    REVIEW_REACTION : uint id PK
    REVIEW_REACTION : uint review_id FK
    REVIEW_REACTION : uint user_id FK
    REVIEW_REACTION : string type
    REVIEW_REACTION : datetime created_at

    REVIEW_COMMENT : uint id PK
    REVIEW_COMMENT : uint review_id FK
    REVIEW_COMMENT : uint user_id FK
    REVIEW_COMMENT : text content
    REVIEW_COMMENT : uint parent_id FK
    REVIEW_COMMENT : datetime created_at

    PLACE_LIKE : uint id PK
    PLACE_LIKE : uint place_id FK
    PLACE_LIKE : uint user_id FK
    PLACE_LIKE : string type
    PLACE_LIKE : datetime created_at

    PLACE_VIEW : uint id PK
    PLACE_VIEW : uint place_id FK
    PLACE_VIEW : uint user_id FK
    PLACE_VIEW : datetime viewed_at

    CHAT : uint id PK
    CHAT : string name
    CHAT : string type
    CHAT : uint owner_id FK
    CHAT : datetime created_at

    CHAT_MEMBER : uint id PK
    CHAT_MEMBER : uint chat_id FK
    CHAT_MEMBER : uint user_id FK
    CHAT_MEMBER : string username
    CHAT_MEMBER : string role

    CHAT_MESSAGE : uint id PK
    CHAT_MESSAGE : uint chat_id FK
    CHAT_MESSAGE : uint user_id FK
    CHAT_MESSAGE : text text
    CHAT_MESSAGE : datetime created_at

    MESSAGE_ATTACHMENT : uint id PK
    MESSAGE_ATTACHMENT : uint message_id FK
    MESSAGE_ATTACHMENT : string url
    MESSAGE_ATTACHMENT : string type
    MESSAGE_ATTACHMENT : datetime created_at

    MEDIA_FILE : uint id PK
    MEDIA_FILE : string url UK
    MEDIA_FILE : string name
    MEDIA_FILE : int64 size
    MEDIA_FILE : string mime_type
    MEDIA_FILE : uint owner_id FK
    MEDIA_FILE : datetime created_at

    GROUP : uint id PK
    GROUP : string name
    GROUP : text description
    GROUP : uint owner_id FK
    GROUP : datetime created_at

    GROUP_MEMBER : uint id PK
    GROUP_MEMBER : uint group_id FK
    GROUP_MEMBER : uint user_id FK
    GROUP_MEMBER : string role
    GROUP_MEMBER : string username
    GROUP_MEMBER : datetime joined_at
